2001-08-03  Max Horn <max@quendi.de>
	* configure.in: slight change for Darwin/Mac OS X
	* audio/conv.cc added, conv.h cleaned up
	* audio/Audio.cc/.h: cleaned up code, fixed speech output on big endian systems
	* audio/Mixer.cc: code clean up
	* audio/pcb.h: disabled a call to "cerr" in the MacOS version, as it could be hit during
	  the audio call back, leading to a deep crash
	* usecode/useval.c: namespace clean up
	* Makefiles: added conv.cc
	* many many files: added/updated/unified legal header

2001-07-03  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/ and docs/readme/ : added makefile.win32 as Unix uses ':' 
	  as seperator and Win32 uses ';'. Changed makefile to output *.dat 
	  instead of *.inc

2001-08-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Jawbone_gump.cc: fixed Jawbone display bug

2001-08-03  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/conversation.cc (Conversation): Show faces with
	translucency, and center text if screen is filled by face.

	* usecode/intrinsics.cc: Don't check for blocking if it looks like
	a drawbridge (this whole thing is kind of a mess!).
	* gamewin.cc: Don't get stuck after teleporting.
	* actions.cc: Avatar can open doors now.

2001-08-02  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Rectangle was 1 tile too small.
	* actors.cc:  Don't call 'unready' usecode if within usecode already.

2001-08-01  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Sign_gump.cc (Sign_gump): Scroll in SI.

	* objs/objs.cc: In SI, don't 'find_nearby()' teleport eggs.  Fixes
	wine cask bug.  (Though it may not be the right way; it's possible
	this is really a bug in the script, and the original SI just found
	the eggs in a different order than Exult.)

2001-07-31 Ryan Nunn <triforce@merlin.net.au>
	* exultmenu.cc, bggame.cc, sigame.cc : Namespace, need I say more?
	* fnames.h, shapes/*.*: Allow patch reading for vga files. Made
	  shapes.vga and all shape info files to read patches.